# substreams-erc20-balance-changes

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs  rust-toolchain.toml  schema.graphql  schema.sql  schema.views.sql  subgraph.yaml  substreams.yaml
clickhouse/: Cargo.toml  Makefile  READM.md  README.md  schema.deprecate.sql  schema.ens.key_value.sql  schema.ens.sql  schema.erc20-balances.sql  schema.erc20-contracts.sql  schema.erc20.sql  schema.native-balances.sql  schema.native-contracts.sql  schema.ohlc-prices.sql  schema.sql  schema.uniswap-v2.sql  schema.uniswap-v3.sql  schema.uniswap.todo  schema.views._contracts.sql  schema.views._pools.sql  schema.views._swaps.sql  schema.views.balances.sql  schema.views.contracts.sql  schema.views.historical-balances.sql  schema.views.historical-erc20-balances.sql  schema.views.historical-native-balances.sql  schema.views.ohlc-balances.sql  schema.views.ohlc-prices.sql  schema.views.swaps.sql  schema.views.transfers.sql  schema.views.uniswap.sql  schema.views_.swaps.sql  substreams.yaml
clickhouse-eas/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
clickhouse-eas/src/: lib.rs
clickhouse-ens/: Cargo.toml  Makefile  README.md  schema.sql  schema.tables.sql  schema.views._addresses.sql  schema.views._expires.sql  schema.views._names.sql  schema.views._records.sql  schema.views._records.todo  schema.views.addresses.sql  schema.views.ens.sql  schema.views.names.sql  schema.views.records.sql  schema.views.sql  substreams.yaml
clickhouse-ens/examples/: ENS Key Value.sql  ens - populate.sql  ens.sql
clickhouse-ens/src/: lib.rs
clickhouse-nfts/: Cargo.toml  Makefile  build.rs  schema.1.events.cryptopunks.sql  schema.1.events.erc721.sql  schema.1.events.erc721_metadata.sql  schema.1.offchain.sql  schema.2.events.erc1155.sql  schema.2.view.erc721_cryptopunks.sql  schema.2.view.seaport-offers.sql  schema.2.view.seaport-orders.sql  schema.2.views.seaport-considerations.sql  schema.2.views.seaport-offers.sql  schema.3.views.erc1155.sql  schema.cursors.sql  schema.events.seaport.sql  schema.offchain.sql  schema.sql  schema.views.erc721.sql  schema.views.seaport--orders.sql  schema.views.seaport-orders-ohlc.sql  schema.views.seaport.sales.sql  schema.views.seaport.sql  substreams.yaml
clickhouse-nfts/examples/: erc1155-balances.sql  erc721-owners.sql  seaport-ohlc.sql  seaport.sql
clickhouse-nfts/src/: cryptopunks.rs  enums.rs  erc1155.rs  erc1155_metadata.rs  erc721.rs  erc721_metadata.rs  lib.rs  seaport.rs  to_json.rs
clickhouse-tokens/: Cargo.toml  Makefile  README.md  schema.0.template.sql  schema.1.events.erc20_balances.sql  schema.1.events.erc20_metadata.sql  schema.1.events.erc20_supply.sql  schema.1.events.erc20_transfers.sql  schema.1.events.native_balances.sql  schema.1.events.native_transfers.sql  schema.1.table.balances.sql  schema.1.table.metadata.sql  schema.1.table.supply.sql  schema.1.table.transfers.sql  schema.2.mv.historical-balances.sql  schema.2.mv.historical-supply.sql  schema.2.mv.metadata-state.sql  schema.2.mv.metadata.sql  schema.2.view.erc20-metadata.sql  schema.3.view.balances.sql  schema.3.view.historical-balances.sql  schema.3.view.historical-supply.sql  schema.3.view.metadata.sql  schema.3.view.transfers.sql  schema.4.mv.metadata.sql  schema.5.insert.metadata.sql  schema.erc20-balances.sql  schema.erc20-contracts.sql  schema.sql  schema.views._contracts.sql  schema.views.balances.sql  schema.views.historical-balances.sql  substreams.yaml
clickhouse-tokens/src/: balances.rs  db_out.rs  (+7 more)
clickhouse-transactions/: Cargo.toml  README.md  schema.sql  substreams.yaml
clickhouse-uniswaps/: Cargo.toml  Makefile  README.md  schema.0.static.verified_tokens.sql  schema.1.dictionary.erc20-contracts.sql  schema.1.events.erc20-metadata.sql  schema.1.events.uniswap-v2.sql  schema.1.events.uniswap-v3.sql  schema.1.events.uniswap-v4.sql  schema.2.view.erc20-metadata.sql  schema.2.view.pools.sql  schema.2.view.swaps.sql  schema.2.views.pools.sql  schema.2.views.swaps.sql  schema.3.table.ohlc_prices.sql  schema.3.table.ohlc_prices_by_day.sql  schema.3.view.ohlc_prices.sql  schema.3.views.ohlc-prices.sql  schema.3.views.ohlc_prices.sql  schema.4.view.ohlc_prices.ERROR  schema.4.view.ohlc_prices.sql  schema.4.view.ohlc_prices_by_day.sql  schema.4.view.ohlc_prices_since_initialize.sql  schema.4.view.pool_activity_summary.sql  schema.4.views.ohlc_prices_by_day.sql  schema.4.views.ohlc_prices_since_initialize.sql  schema.5.view.ohlc_prices_by_day.ERROR  schema.5.view.ohlc_prices_by_day.sql  schema.5.view.ohlc_prices_since_initialize.ERROR  schema.5.view.ohlc_prices_since_initialize.sql  schema.sql  substreams.yaml
common/: Cargo.toml
contracts/: Cargo.toml  Makefile  calls.rs  lib.rs  substreams-v1.8.2.yaml  substreams.yaml
erc1155/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
erc1155-metadata/: Cargo.toml  Makefile  README.md  substreams.yaml
erc20/: Cargo.toml  Makefile  README.md  substreams.yaml
erc20-balances/: Cargo.toml  Makefile  README.md  substreams.yaml
erc20-balances-transfers/: Cargo.toml  Makefile  substreams.yaml
erc20-contracts/: Cargo.toml  README.md  abi.json  substreams.yaml
erc20-metadata/: Cargo.toml  Makefile  README.md  build.rs  substreams.yaml
erc20-rpc/: Cargo.toml  Makefile  README.md
erc20-stores/: Cargo.toml  Makefile  README.md  substreams.yaml
erc20-supply/: Cargo.toml  substreams.yaml
erc20-transfers/: Cargo.toml  Makefile  README.md  substreams.yaml
erc721/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
erc721-events/: Cargo.toml  Makefile  schema.sql  substreams.yaml
erc721-metadata/: Cargo.toml  Makefile  README.md  substreams.yaml
erc721-rpc/: Cargo.toml  Makefile  README.md  substreams.yaml
evm-tokens/: Cargo.toml  README.md  substreams.yaml
native/: Cargo.toml  Makefile  substreams.yaml
native-balances/: Cargo.toml  Makefile  README.md  substreams.yaml
native-contracts/: Cargo.toml  README.md  substreams.yaml
native-transfers/: Cargo.toml  Makefile  README.md  substreams.yaml
(+377 files in other folders)
