[workspace]
members = [
  "erc20-balances",
  "erc20-balances-rpc",
  "erc20-contracts",
  "erc20-contracts-rpc",
  "native-balances",
  "native-contracts",
  "uniswap-v2",
  "uniswap-v3",
  "proto",
  "common",
  "ens",
  "erc721",
  "erc721-metadata",
  "erc1155",
  "seaport",
  "clickhouse",
  "clickhouse-nfts",
  "clickhouse-ens",
  "clickhouse-transactions",
  "clickhouse-contracts",
  "clickhouse-eas"
]
resolver = "2"

[workspace.package]
description = "EVM Tokens"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.6.1"
substreams-abis = "0.4.1"
substreams-ethereum = "0.10.4"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
