[workspace]
members = [
  # Tokens
  # "clickhouse",
  "erc20-transfers",
  "erc20-metadata",
  "erc20-metadata-functions",
  "erc20-stores",
  "erc20-supply",
  "erc20-balances-rpc",
  "native-balances",
  "native-transfers",

  # DEX
  "uniswap-v2",
  "uniswap-v3",
  "uniswap-v4",

  # NFT
  "clickhouse-nfts",
  "erc721",
  "erc721-metadata",
  "erc1155",
  "seaport",

  # General
  "ens",
  "clickhouse-ens",
  "clickhouse-transactions",
  "clickhouse-contracts",
  "clickhouse-eas",

  # Common
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "EVM Tokens"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.6.1"
substreams-abis = "0.4.1"
substreams-ethereum = "0.10.4"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
