[package]
name = "clickhouse-eas"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams-database-change = "2.0"
common = { path = "../common" }
