[package]
name = "clickhouse-ens"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
clickhouse = { path = "../clickhouse" }
proto = { path = "../proto" }
common = { path = "../common" }
