[package]
name = "clickhouse-nfts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proto = { path = "../proto" }
common = { path = "../common" }
