[package]
name = "tokens"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
proto = { path = "../proto" }
common = { path = "../common" }
