[package]
name = "erc20-balances-clickhouse"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
erc20-balances = { path = "../erc20-balances" }
