[package]
name = "evm-tokens-clickhouse"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
erc20-balances-transfers = { path = "../erc20-balances-transfers" }
