[package]
name = "erc1155"
version = "0.2.1"
description = "ERC1155 events substreams package"
edition = "2021"
license = "Apache-2.0"
authors = ["Yaro Shkvorets <yaro@pinax.network>"]
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
prost = "0.13"
common = { path = "../common" }
proto = { path = "../proto" }

