[package]
name = "erc20-balances-transfers"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Matthieu Vachon <https://github.com/maoueh>",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = { workspace = true }
substreams-ethereum = "0.10"
substreams-abis = "0.1"
