[package]
name = "erc20-contracts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
authors = [
    "Denis <denis@pinax.network>",
    "Etienne Donneger <etienne.d@pinax.network>",
    "MathieuLefebvre <mathieu@pinax.network>"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = "0.10"
substreams-abis = "0.1"
proto = { path = "../proto" }
erc20 = { path = "../erc20" }
common = { path = "../common" }