[package]
name = "erc20-contracts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
authors = [
    "Denis <denis@pinax.network>",
    "Etienne Donneger <etienne.d@pinax.network>",
    "MathieuLefebvre <mathieu@pinax.network>"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
erc20-balances = { path = "../erc20-balances" }
common = { path = "../common" }