[package]
name = "erc20-metadata"
description = "ERC20 metadata"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
