[package]
name = "erc20-metadata"
description = "ERC20 metadata"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
ethabi = "18.0"
prost = { workspace = true }
prost-types = { workspace = true }
num-bigint = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.13"
anyhow = "1"
substreams-ethereum = "0.10"
