[package]
name = "erc20-stores"
description = "ERC20"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
