[package]
name = "erc20"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Matthieu Vachon <https://github.com/maoueh>",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = "0.10"
substreams-abis = "0.1"
proto = { path = "../proto" }