[package]
name = "erc721-rpc"
description = "ERC721 mints substreams package"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Yaro Shkvorets <yaro@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
