[package]
name = "erc721"
version = "0.2.1"
description = "ERC721 events substreams package"
edition = "2021"
license = "Apache-2.0"
authors = ["Yaro Shkvorets <yaro@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
