[package]
name = "erc721"
description = "ERC721 events substreams package"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Yaro Shkvorets <yaro@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
