[package]
name = "evm-tokens"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-database-change = "2.0"
erc20 = { path = "../erc20" }
proto = { path = "../proto" }
common = { path = "../common" }
