[package]
name = "native"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
authors = [
    "Denis <denis@pinax.network>",
    "Colin Dickson <https://github.com/colindickson>",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = "0.10"
proto = { path = "../proto" }
common = { path = "../common" }
